--- a/Bordes_Sombras_CARDS/Border-Radius/Practica/styles.css
+++ b/Bordes_Sombras_CARDS/Border-Radius/Practica/styles.css
@@ -1,23 +1,23 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 .card{
-    border: 1px solid black;
     width: 400px;
-    margin: 20px auto
-;
+    border: 1px solid black;
+    margin: 80px auto;
+
 }
 
 .img{
-    width: 200px;
-    height: 200px;
     display: block;
-    margin: 40px auto;
+    width: 300px;
+    height: 300px;
     border-radius: 50%;
     object-fit: cover;
+    margin: 40px auto;
 }
 
 .name{
@@ -26,13 +26,20 @@
 }
 
 .cta{
-    display: block;
-    width: 150px;
-    color: white;
-    padding: 15px 0;
-    background: crimson;
-    margin: 20px auto;
     text-decoration: none;
+    display:block;
+    background: crimson;
+    color: white;
+    width: 180px;
     text-align: center;
-    border-radius: 5px;
+    margin: 20px auto;
+    padding: 20px 15px;
+    border-radius: 10px;
+    font-size: 20px;
 }
+
+
+
+
+
+
