--- a/Bordes_Sombras_CARDS/Border-Radius/Practica/styles.css
+++ b/Bordes_Sombras_CARDS/Border-Radius/Practica/styles.css
@@ -1,3 +1,43 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.card{
+    width: 400px;
+    border: 1px solid black;
+    margin: 80px auto;
+    background: steelblue;
+}
+
+.img{
+    display: block;
+    width: 300px;
+    height: 300px;
+    margin: 20px auto;
+    object-fit: cover;
+    border-radius: 50%;
+
+}
+
+.name{
+    text-align: center;
+    font-family: Arial;
+}
+.cta{
+    text-decoration: none;
+    text-align: center;
+    display: block;
+    margin: 20px auto;
+    background: crimson;
+    color: white;
+    width: 150px;
+    padding: 15px 20px;
+    border-radius: 10px;
+
+
+}
 
 
 
